kubernetes/balancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balancer
  namespace: k8s_project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: balancer
  template:
    metadata:
      labels:
        app: balancer
    spec:
      containers:
      - name: nginx
        image: nginx:stable-alpine3.20
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: ./templates/default.conf.template
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
