kubernetes/myapp-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-1
  namespace: k8s_project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-1
  template:
    metadata:
      labels:
        app: myapp-1
    spec:
      containers:
      - name: myapp-1
        image: myapp-1:latest
        ports:
        - containerPort: 7080
        volumeMounts:
        - name: web-page
          mountPath: /app/web/page
        - name: web-static
          mountPath: /app/web/static
      volumes:
      - name: web-page
        hostPath:
          path: ./web/page
      - name: web-static
        hostPath:
          path: ./web/static
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-1-service
  namespace: k8s_project
spec:
  selector:
    app: myapp-1
  ports:
  - protocol: TCP
    port: 7080
    targetPort: 7080
  type: ClusterIP
